# aoc2025

./: Makefile  pyproject.toml
src/aoc2025/: main.py
src/aoc2025/disjoint_set_forest/: disjoint_set_forest.py
src/aoc2025/solvers/day01/: dial.py  problem1.py  problem2.py
src/aoc2025/solvers/day02/: ids.py  input_parsing.py  invalid_id.py  problem1.py  problem2.py
src/aoc2025/solvers/day03/: banks.py  problem1.py  problem2.py
src/aoc2025/solvers/day04/: problem1.py  problem2.py  roll_grid.py
src/aoc2025/solvers/day05/: parsing.py  problem1.py  problem2.py  range_merge.py
src/aoc2025/solvers/day06/: operation.py  parsing.py  problem1.py  problem2.py
src/aoc2025/solvers/day07/: input_parsing.py  problem1.py  problem2.py
tests/day01/: test_dial.py  test_problem1.py  test_problem2.py
tests/day02/: test_ids.py  test_invalid_id.py  test_problem1.py  test_problem2.py
tests/day03/: test_banks.py  test_problem1.py  test_problem2.py
tests/day04/: test_problem1.py  test_problem2.py
tests/day05/: test_problem1.py  test_problem2.py  test_range_merge.py
tests/day06/: test_operation.py  test_parsing.py  test_problem1.py  test_problem2.py
tests/day07/: test_input_parsing.py  test_problem1.py  test_problem2.py
tests/day08/: test_problem1.py  test_problem2.py
tests/day09/: test_problem1.py  test_problem2.py  test_utils.py
tests/day10/: test_path_finding.py  test_problem1.py  test_problem2.py
tests/day11/: test_problem1.py  test_problem2.py
tests/day12/: test_problem1.py  test_problem2.py
tests/disjoint_set_forest/: test_disjoint_set_forest.py
(+15 files in other folders)
