[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "crab-apple",email = "12462619+crab-apple@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-boilerplate = "aoc2025.main:create_boilerplate"
solve-all = "aoc2025.main:solve_all"

